Fix link in template

--- a/src/template.mustache
+++ b/src/template.mustache
@@ -5,7 +5,7 @@
     <title>bram.pw</title>
     <link href="https://unpkg.com/sanitize.css/evergreen.css" rel="stylesheet"/>
     <link href="https://unpkg.com/sanitize.css/typography.css" rel="stylesheet"/>
-    <link href="../build/app.css" rel="stylesheet"/>
+    <link href="app.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
