--- a/src/template.mustache
+++ b/src/template.mustache
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>bram.pw</title>
+    <title>Bram Ceulemans</title>
     <link href="https://unpkg.com/sanitize.css/evergreen.css" rel="stylesheet"/>
     <link href="https://unpkg.com/sanitize.css/typography.css" rel="stylesheet"/>
     <link href="app.css" rel="stylesheet"/>
